src/main/java/com/example/login_jwt/global/error/dto/ErrorResponse.java
package com.example.login_jwt.global.error.dto;

public record ErrorResponse(
        int statusCode,
        String message
) {
}